--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
-<!DOCTYPE **html**>
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>ronaldbook</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-  <h1>ronaldbook</h1>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ronaldbook</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="reset.css">
+</head>
+
+<body>
+    <h1>ronaldbook</h1>
+
+</body>
+
 </html>
