--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 </head>
 
 <body>
-    
+    <body>
+        <header class="cabeçalho">
+            <span class="cabeçalho"></span>
+            <img src="img/Logo.svg" alt="Logo da AluraBooks">
+            <a href="#"><img src="img/Favoritos.svg"></a>
+            <a href="#"><img src="img/Compras.svg"></a>
+            <a href="#"><img src="img/Usuario.svg"></a>
+        </header>
+    </body>
 
 </body>
 
