--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
       />
     </section>
     
+    <section class="carrossel">
+      <h2 class="carrossel__titulo">Novos lançamentos</h2>
+    </section>
+
 </body>
 
 </html>
