--- a/index.html
+++ b/index.html
@@ -136,6 +136,33 @@
       </div>
       <img src="img/Angular.svg" class="descrição__imagem" />
       <section class=”carrossel”>
+        <section class="tópicos">
+          <h2 class="tópicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+          <ul class="tópicos__lista">
+            <li class="tópicos__item"><a href="#" class="tópicos__link">Android</a></li>
+            <li class="tópicos__item">
+              <a href="#" class="tópicos__link">Marketing Digital</a>
+            </li>
+            <li class="tópicos__item">
+              <a href="#" class="tópicos__link">Agile</a>
+            </li>
+            <li class="tópicos__item">
+              <a href="#" class="tópicos__link">Startups</a>
+            </li>
+            <li class="tópicos__item">
+              <a href="#" class="tópicos__link">HTML & CSS</a>
+            </li>
+            <li class="tópicos__item">
+              <a href="#" class="tópicos__link">Python</a>
+            </li>
+            <li class="tópicos__item">
+              <a href="#" class="tópicos__link">OO</a>
+            </li>
+            <li class="tópicos__item">
+              <a href="#" class="tópicos__link">Java</a>
+            </li>
+          </ul>
+        </section>
         <h2 class="carrossel__titulo">Mais vendidos</h2>
         <div class="swiper">
           <!-- Additional required wrapper -->
