--- a/index.html
+++ b/index.html
@@ -168,6 +168,12 @@
           <p class="contato__texto"> Atualizações de e-books, novos livros, promoções e outros.</p>
           <input type="email" placeholder="Cadastre seu e-mail" class="contato__email"/>
         </section>
+        <hr />
+
+<footer class="rodapé">
+  <h2 class="rodapé__titulo">Grupo Alura</h2>
+</footer>
+
         <h2 class="carrossel__titulo">Mais vendidos</h2>
         <div class="swiper">
           <!-- Additional required wrapper -->
