--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                           <a href="#" class="lista-menu__link">Design & UX</a>
                         </li>
                     </ul>
+                  <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
             <img src="img/Logo.svg" alt="Logo da AluraBooks" class="container__imagem" />
           </div>
         <div class="container">
