--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="styles.css" />
+    <link
+  href="https://fonts.googleapis.com/css?family=Josefin+Sans:wght@400;700&display=swap"
+  rel="stylesheet"
+/>
   </head>
 
 <body>
@@ -53,6 +57,11 @@
             <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
             <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
         </div>
+        <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem" />
+<h1 class="container__titulo">ronaldbooks</h1>
+<h1 class="container__titulo">
+  <b class="container__titulo--negrito">ronald</b>books
+</h1>
     </header>
 
     <section class="banner">
