--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@
 
 <body>
     <header class="cabeçalho">
-        <div class="container">
+      <div class="container">
+        <a href="#"
+          ><img
+            src="img/Favoritos.svg"
+            alt="Meus favoritos"
+            class="container__imagem"
+        /></a>
+      
+        <!-- Código omitido -->
+      </div>
+
             <input type="checkbox" id="menu" class="container__botao" />
             <label for="menu">
                 <span class="cabeçalho__menu-hamburguer container__imagem"></span>
